# shockarb_lab

./: .gitignore  csv_to_md.py  explain_score.py  load_tickers.py  names.py  news_scanner.py  peek_manifest.py  portfolio_sizer.py  pyproject.toml  pytest.ini  score_live.py  setup.py  test.parquet
data/: manifest.json  ticker_reference_cache.json  us_20260307_135502.json  us_20260309_142822.json
datamgr/: coordinator.py  interfaces.py  pipeline_wiring_diff.py  requests.py
datamgr/providers/: mock.py  yfinance.py
datamgr/stores/: parquet.py
docs/: API.md  CHEATSHEET.md  README.md  UTILS.md
shockarb/: __init__.py  __main__.py  backtest.py  cache.py  cli.py  config.py  engine.py  names.py  pipeline.py  report.py  store.py
tests/: __init__.py  conftest.py  test_backtest.py  test_cache.py  test_cli.py  test_config.py  test_coordinator_phase1.py  test_engine.py  test_pipeline.py  test_report.py  test_shockarb.py
utils/: csv_to_md.py  daily_scanner.py  data_inventory.py  maintain_ticker_cache.py  news_scanner.py  portfolio_sizer.py  price_check.py  run_backtest.py  score_history.py
